feat(PMB-15): create Version V1 for post endpoint to transfer money to a friend
